--- a/app/src/main/res/layout/content_activity_to_do.xml
+++ b/app/src/main/res/layout/content_activity_to_do.xml
@@ -29,6 +29,7 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             app:defaultNavHost="true"
             app:navGraph="@navigation/nav_graph"
+            android:layout_margin="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/fcv"/>
