--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -5,7 +5,7 @@
     android:layout_height="180dp"
     android:orientation="vertical"
     android:gravity="center_vertical"
-    android:background="@color/teal_200"
+    android:background="#A3D0D4"
     android:padding="16dp"
     >
 
@@ -24,7 +24,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="juliana@correo.com"/>
-
 
 
 </LinearLayout>
