--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,4 +18,8 @@
         android:label="About"
         tools:layout="@layout/fragment_about"/>
 
+    <!--Le agrego la capa de nav header?-->
+
+
+
 </navigation>
