--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,9 +14,11 @@
 
     <fragment
         android:id="@+id/nav_about"
-        android:name="com.example.pruebaroom.ToDoFragment"
+        android:name="com.example.pruebaroom.AboutFragment"
         android:label="About"
         tools:layout="@layout/fragment_about"/>
+
+
 
     <!--Le agrego la capa de nav header?-->
 
