--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -17,6 +17,13 @@
         android:src="@mipmap/ic_launcher_round" />
 
     <TextView
+        android:id="@+id/tvId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="0"
+        android:visibility="gone"/>
+
+    <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,6 +46,13 @@
         android:layout_marginTop="10dp"
         android:text="$20000"
         android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/btnEditfd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"
+        android:text="Edit Task"/>
 
 
 </LinearLayout>
