--- a/app/src/main/res/layout/item_producto.xml
+++ b/app/src/main/res/layout/item_producto.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/imageViewProductoIP"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         app:srcCompat="@drawable/ic_launcher_background"
         />
 
